Fixes Alertmanager URL in Prometheus configuration

--- a/config/autojoin/prometheus/prometheus.yml.template
+++ b/config/autojoin/prometheus/prometheus.yml.template
@@ -22,7 +22,7 @@ alerting:
   alertmanagers:
     - static_configs:
       - targets:
-        - alertmanager.{{GCLOUD_PROJECT}}.measurementlab.net
+        - alertmanager.{{PROJECT}}.measurementlab.net
       api_version: v2
       basic_auth:
         username: mlab
