Fixes a typo in the autojoin federation scrape job

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -411,7 +411,7 @@ scrape_configs:
       - targets: ['prometheus-data-pipeline-basic.{{PROJECT}}.measurementlab.net']
 
   # Scrape config for services running in autojoin cluster.
-  - job_name: 'federation-data-autojoin'
+  - job_name: 'federation-autojoin'
     honor_labels: true
     metrics_path: '/federate'
     # Allow more time, since the number of metrics may be large.
