Changes substitution variable name for federation scrape of autojoin

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -423,7 +423,7 @@ scrape_configs:
       'match[]':
         - 'script_success'
     static_configs:
-      - targets: ['prometheus-autojoin-basic.{{AUTOJOIN_PROJECT}}.measurementlab.net']
+      - targets: ['prometheus-autojoin-basic.{{PROJECT}}.measurementlab.net']
 
   # Scrape config for federation.
   #
