--- a/config/autojoin/prometheus/prometheus.yml.template
+++ b/config/autojoin/prometheus/prometheus.yml.template
@@ -351,3 +351,113 @@ scrape_configs:
         target_label: fqdn
         replacement: ${1}
 
+  - job_name: 'blackbox-targets-sidecars'
+    metrics_path: /probe
+
+    file_sd_configs:
+      - files:
+          - /blackbox-targets/sidecars.json
+        # Attempt to re-read files every five minutes.
+        refresh_interval: 5m
+
+    # This relabel config is necessary. The relabel config redefines the address
+    # to scrape and sets the correct parameters to pass to the scrape target.
+    #
+    # While not as direct as other configs, this approach allows us to specify a
+    # dynamic list of targets for a static blackbox exporter. This is also the
+    # supported configuration: https://github.com/prometheus/blackbox_exporter
+    relabel_configs:
+
+      # The default __address__ value is a target host from the config file.
+      # Here, we set (i.e. "replace") a request parameter "target" equal to the
+      # host value. NOTE: we also insert a trailing "." to optimize DNS lookup.
+      - source_labels: [__address__]
+        regex: ([a-z0-9-.]+)(:[0-9]+)?
+        target_label: __param_target
+        replacement: ${1}.${2}
+
+      # Sets the module query parameter to tcp_v4_online. The source label of
+      # "org" is arbitrary, since we don't any part of it, but it is a required
+      # field.
+      - source_labels: [org]
+        regex: (.*)
+        target_label: __param_module
+        replacement: tcp_v4_online
+
+      # Use the original target __address__ to define the "instance" label.
+      - source_labels: [__address__]
+        regex: (.*)
+        target_label: instance
+        replacement: ${1}
+
+      # Extract the site name from the FQDN of the node/service and drop it
+      # into a label named "site'.
+      - source_labels: [__address__]
+        regex: ndt-([a-z0-9]+)-.*
+        target_label: site
+        replacement: ${1}
+
+      # Since __address__ is the target that prometheus scrapes,
+      # unconditionally reset the __address__ label to the blackbox exporter
+      # address.
+      - source_labels: []
+        regex: .*
+        target_label: __address__
+        replacement: blackbox-service.default.svc.cluster.local:9115
+
+  - job_name: 'blackbox-targets-ndt-server'
+    metrics_path: /probe
+
+    file_sd_configs:
+      - files:
+          - /blackbox-targets/ndt-server.json
+        # Attempt to re-read files every five minutes.
+        refresh_interval: 5m
+
+    # This relabel config is necessary. The relabel config redefines the address
+    # to scrape and sets the correct parameters to pass to the scrape target.
+    #
+    # While not as direct as other configs, this approach allows us to specify a
+    # dynamic list of targets for a static blackbox exporter. This is also the
+    # supported configuration: https://github.com/prometheus/blackbox_exporter
+    relabel_configs:
+
+      # The default __address__ value is a target host from the config file.
+      # Here, we set (i.e. "replace") a request parameter "target" equal to the
+      # host value. NOTE: we also insert a trailing "." to optimize DNS lookup.
+      # Unconditionally sets the port 443. We are not going to worry about port
+      # 80, as almost all clients use 443.
+      - source_labels: [__address__]
+        regex: (.*)
+        target_label: __param_target
+        replacement: ${1}.443
+
+      # Sets the module query parameter to tcp_v4_tls_online. The source label
+      # of "org" is arbitrary, since we don't any part of it, but it is a
+      # required field.
+      - source_labels: [org]
+        regex: (.*)
+        target_label: __param_module
+        replacement: tcp_v4_tls_online
+
+      # Use the original target __address__ to define the "instance" label.
+      - source_labels: [__address__]
+        regex: (.*)
+        target_label: instance
+        replacement: ${1}
+
+      # Extract the site name from the FQDN of the node/service and drop it
+      # into a label named "site'.
+      - source_labels: [__address__]
+        regex: ndt-([a-z0-9]+)-.*
+        target_label: site
+        replacement: ${1}
+
+      # Since __address__ is the target that prometheus scrapes,
+      # unconditionally reset the __address__ label to the blackbox exporter
+      # address.
+      - source_labels: []
+        regex: .*
+        target_label: __address__
+        replacement: blackbox-service.default.svc.cluster.local:9115
+
