Mounts blackbox-target in prometheus-storage

--- a/k8s/autojoin/deployments/prometheus.yml
+++ b/k8s/autojoin/deployments/prometheus.yml
@@ -80,18 +80,18 @@ spec:
         - mountPath: /legacy-targets
           name: prometheus-storage
           subPath: legacy-targets
-        # /autonode-targets
         - mountPath: /autonode-targets
           name: prometheus-storage
           subPath: autonode-targets
-        # /script-targets
         - mountPath: /script-targets
           name: prometheus-storage
           subPath: script-targets
-        # /aeflex-targets
         - mountPath: /aeflex-targets
           name: prometheus-storage
           subPath: aeflex-targets
+        - mountPath: /blackbox-targets
+          name: prometheus-storage
+          subPath: blackbox-targets
         # /etc/prometheus/prometheus.yml contains the M-Lab Prometheus config.
         - mountPath: /etc/prometheus
           name: prometheus-config
