Uses new -client-name flag for ndt7 e2e monitoring of autonodes

--- a/config/autojoin/script-exporter/script_exporter.yml
+++ b/config/autojoin/script-exporter/script_exporter.yml
@@ -6,6 +6,6 @@ scripts:
     script: >
       EXPERIMENT=ndt7 cache_exit_code.sh 3600
       monitoring-token -machine=${TARGET} -service=ndt/ndt7 -service-url --env-name SERVICE_URL -service-url-key-name wss:///ndt/v7/download --
-      ndt7-client
+      ndt7-client -client-name="mlab-e2e-monitoring"
     timeout: 50
 
