--- a/config/autojoin/bigquery/bq_ndt7_test.sql.template
+++ b/config/autojoin/bigquery/bq_ndt7_test.sql.template
@@ -11,7 +11,7 @@
 SELECT
   COUNT(*) AS value_total
 FROM
-  `mlab-autojoin.autoload_v2_ndt.ndt7_union`
+  `{{PROJECT}}.autoload_v2_ndt.ndt7_union`
 WHERE
   date > DATE_SUB(CURRENT_DATE(), INTERVAL 2 DAY)
   AND raw.StartTime < TIMESTAMP_SUB(CURRENT_TIMESTAMP(), INTERVAL 4 HOUR)
