Improve monitoring for the autojoin cluster (#1077)
* Adds new alert for when the Autojoin API is returning too many errors

Actually, most of the changes in this PR are to even support alerts from the
autojoin cluster.

* Gets Alertmanage basic auth k8s Secret from GCP Secret Manager

* Adds missing comma to autojoin prometheus manifest

* Mounts the alertmanager credentials volume in correct container

I had accidentally mounted it in the config-reload container. This moves it to
the prometheus container.

* Fixes Alertmanager URL in Prometheus configuration

* Moves autonode e2e monitoring to the autojoin cluster

I _believe_ that Stephen implemented the e2e script-exporter monitoring of
autonodes in the prometheus-federation cluster because the Locate Services
queries this Prometheus instance for script_success metrics to determine
whether to server a particular host. However, it make more sense to do all
Autojoin monitoring in the autojoin cluster, and then simply do a federations
scrape of those script_success metrics. This separates concerns better.

* Fixes a typo in the autojoin federation scrape job

* Subs the AUTOJOIN_PROJECT var in Prometheus config file

* Fixes byos-nodes script job in the autojoin cluster

* Puts the AUTOJOIN_PROJECT template sub in right Prom config file

* Changes substitution variable name for federation scrape of autojoin

* Remove AUTOJOIN_CLUSTER template variable substitution

* Removes gkedatasource variable from Autojoin:SiteOverview dashboard

The e2e script-exporter metrics are now coming from the autojoin cluster.

* Adds blackbox_exporter probing for sidecars and ndt-server in autojoin

* Apply the blackbox ConfigMap instead of replace

The replace operation fails when the ConfigMap doesn't already exist. I can't
recall why I set it to replace some years back. Let's try with apply.

* Mounts blackbox-target in prometheus-storage

* Fix ndt-server blackbox target port

It was missing a colon between the hostname and port.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,6 +10,8 @@ availableSecrets:
   secretManager:
   - versionName: projects/${PROJECT_NUMBER}/secrets/prometheus-support-build-alertmanager-slack-channel-url/versions/latest
     env: AM_SLACK_CHANNEL_URL
+  - versionName: projects/${PROJECT_NUMBER}/secrets/prometheus-support-build-alertmanager-basic-auth-secret/versions/latest
+    env: AM_BASIC_AUTH_SECRET
   - versionName: projects/${PROJECT_NUMBER}/secrets/prometheus-support-build-grafana-client-secret-name/versions/latest
     env: GF_AUTH_GOOGLE_CLIENT_SECRET
   - versionName: projects/${PROJECT_NUMBER}/secrets/prometheus-support-build-grafana-client-id-name/versions/latest
@@ -60,6 +62,7 @@ steps:
   - 'PROM_VERSION=2.37.0'
   secretEnv:
   - AM_SLACK_CHANNEL_URL
+  - AM_BASIC_AUTH_SECRET
   - GF_AUTH_GOOGLE_CLIENT_SECRET
   - GF_AUTH_GOOGLE_CLIENT_ID
   - GITHUB_RECEIVER_AUTH_TOKEN
