--- a/config/autojoin/prometheus/prometheus.yml.template
+++ b/config/autojoin/prometheus/prometheus.yml.template
@@ -15,7 +15,19 @@ global:
 # Load rules once and periodically evaluate them according to the global
 # 'evaluation_interval'.
 rule_files:
+  - /etc/prometheus/alerts.yml
   # - /etc/prometheus/rules.yml
+
+alerting:
+  alertmanagers:
+    - static_configs:
+      - targets:
+        - alertmanager.{{PROJECT}}.measurementlab.net
+      api_version: v2
+      basic_auth:
+        username: mlab
+        password_file: /etc/alertmanager/password
+      scheme: https
 
 # Scrape configurations.
 #
@@ -257,12 +269,195 @@ scrape_configs:
         target_label: kubernetes_name
 
 
-  # Scrape byos-nodes every minute.
-  - job_name: 'byos-nodes'
+  # Scrape autonodes every minute. This picks up metrics from all services
+  # running (e.g., ndt-server, tcp-info, node-exporter, etc.).
+  - job_name: 'autonodes'
     scrape_timeout: 40s
     file_sd_configs:
       - files:
-          - /byos-nodes/*.json
+          - /autonode-targets/*.json
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
     scheme: http
+
+  # Scrape AppEngine Flex VMs.
+  #
+  # In order to scrape Prometheus metrics directly from Flex VMs, the app.yaml
+  # configuration must include a rule to forward the container port to the host
+  # VM. The measurementlab/mlab-service-discovery detects these VMs and
+  # generates a targets file.
+  - job_name: 'aeflex-targets'
+    file_sd_configs:
+      - files:
+          - /aeflex-targets/*.json
+        # Attempt to re-read files every five minutes.
+        refresh_interval: 5m
+
+    relabel_configs:
+      # Copy all labels from the aeflex service discovery.
+      - action: labelmap
+        regex: __aef_(.+)
+
+  # Scrape config for the script_exporter for autonodes.
+  - job_name: 'script-targets-autonode'
+    metrics_path: /probe
+    scrape_timeout: 50s
+
+    file_sd_configs:
+      - files:
+          - /script-targets/*.json
+        # Attempt to re-read files every five minutes.
+        refresh_interval: 5m
+
+    # The relabel config sets the script exporter address with the correct
+    # parameters for the target node.
+    relabel_configs:
+      # The value of the source label named "service" must match the name of a
+      # configured script in the script_exporter configuration. See this file:
+      # https://github.com/m-lab/prometheus-support/blob/main/config/federation/script-exporter/script_exporter.yml
+      - source_labels: [service]
+        regex: (.*)
+        target_label: __param_name
+        replacement: ${1}
+
+      # The default __address__ value is a target host from the config file.
+      # Here, we set (i.e. "replace") a request parameter "target" equal to the
+      # host value.
+      - source_labels: [__address__]
+        regex: (.*)
+        target_label: __param_target
+        replacement: ${1}
+
+      # Extract the site name from the FQDN of the node/service and drop it
+      # into a label named "site'.
+      - source_labels: [__address__]
+        regex: ^[a-z0-9^-]+-([a-z]{3}[0-9]{1,10})-.*
+        target_label: site
+        replacement: ${1}
+
+      # Since __address__ is the target that prometheus will contact,
+      # unconditionally reset the __address__ label to the script_exporter
+      # address.
+      - source_labels: []
+        regex: .*
+        target_label: __address__
+        replacement: script-exporter.default.svc.cluster.local:9172
+
+      # The Locate Service filters on the "fqdn" label when looking for failing
+      # e2e tests. Set the "fqdn" label to be equal to the "machine" label,
+      # which is actually the FQDN of the machine.
+      - source_labels: [machine]
+        regex: (.*)
+        target_label: fqdn
+        replacement: ${1}
+
+  - job_name: 'blackbox-targets-sidecars'
+    metrics_path: /probe
+
+    file_sd_configs:
+      - files:
+          - /blackbox-targets/sidecars.json
+        # Attempt to re-read files every five minutes.
+        refresh_interval: 5m
+
+    # This relabel config is necessary. The relabel config redefines the address
+    # to scrape and sets the correct parameters to pass to the scrape target.
+    #
+    # While not as direct as other configs, this approach allows us to specify a
+    # dynamic list of targets for a static blackbox exporter. This is also the
+    # supported configuration: https://github.com/prometheus/blackbox_exporter
+    relabel_configs:
+
+      # The default __address__ value is a target host from the config file.
+      # Here, we set (i.e. "replace") a request parameter "target" equal to the
+      # host value. NOTE: we also insert a trailing "." to optimize DNS lookup.
+      - source_labels: [__address__]
+        regex: (.*)
+        target_label: __param_target
+        replacement: ${1}
+
+      # Sets the module query parameter to tcp_v4_online. The source label of
+      # "org" is arbitrary, since we don't any part of it, but it is a required
+      # field.
+      - source_labels: [org]
+        regex: (.*)
+        target_label: __param_module
+        replacement: tcp_v4_online
+
+      # Use the original target __address__ to define the "instance" label.
+      - source_labels: [__address__]
+        regex: (.*)
+        target_label: instance
+        replacement: ${1}
+
+      # Extract the site name from the FQDN of the node/service and drop it
+      # into a label named "site'.
+      - source_labels: [__address__]
+        regex: ndt-([a-z0-9]+)-.*
+        target_label: site
+        replacement: ${1}
+
+      # Since __address__ is the target that prometheus scrapes,
+      # unconditionally reset the __address__ label to the blackbox exporter
+      # address.
+      - source_labels: []
+        regex: .*
+        target_label: __address__
+        replacement: blackbox-service.default.svc.cluster.local:9115
+
+  - job_name: 'blackbox-targets-ndt-server'
+    metrics_path: /probe
+
+    file_sd_configs:
+      - files:
+          - /blackbox-targets/ndt-server.json
+        # Attempt to re-read files every five minutes.
+        refresh_interval: 5m
+
+    # This relabel config is necessary. The relabel config redefines the address
+    # to scrape and sets the correct parameters to pass to the scrape target.
+    #
+    # While not as direct as other configs, this approach allows us to specify a
+    # dynamic list of targets for a static blackbox exporter. This is also the
+    # supported configuration: https://github.com/prometheus/blackbox_exporter
+    relabel_configs:
+
+      # The default __address__ value is a target host from the config file.
+      # Here, we set (i.e. "replace") a request parameter "target" equal to the
+      # host value. NOTE: we also insert a trailing "." to optimize DNS lookup.
+      # Unconditionally sets the port 443. We are not going to worry about port
+      # 80, as almost all clients use 443.
+      - source_labels: [__address__]
+        regex: (.*)
+        target_label: __param_target
+        replacement: ${1}.:443
+
+      # Sets the module query parameter to tcp_v4_tls_online. The source label
+      # of "org" is arbitrary, since we don't any part of it, but it is a
+      # required field.
+      - source_labels: [org]
+        regex: (.*)
+        target_label: __param_module
+        replacement: tcp_v4_tls_online
+
+      # Use the original target __address__ to define the "instance" label.
+      - source_labels: [__address__]
+        regex: (.*)
+        target_label: instance
+        replacement: ${1}
+
+      # Extract the site name from the FQDN of the node/service and drop it
+      # into a label named "site'.
+      - source_labels: [__address__]
+        regex: ndt-([a-z0-9]+)-.*
+        target_label: site
+        replacement: ${1}
+
+      # Since __address__ is the target that prometheus scrapes,
+      # unconditionally reset the __address__ label to the blackbox exporter
+      # address.
+      - source_labels: []
+        regex: .*
+        target_label: __address__
+        replacement: blackbox-service.default.svc.cluster.local:9115
+
