Tells Prometheus to ingest rules.yml

--- a/config/autojoin/prometheus/prometheus.yml.template
+++ b/config/autojoin/prometheus/prometheus.yml.template
@@ -16,7 +16,7 @@ global:
 # 'evaluation_interval'.
 rule_files:
   - /etc/prometheus/alerts.yml
-  # - /etc/prometheus/rules.yml
+  - /etc/prometheus/rules.yml
 
 alerting:
   alertmanagers:
