Adds missing colon to rules.yml for autojoin cluster

--- a/config/autojoin/prometheus/rules.yml
+++ b/config/autojoin/prometheus/rules.yml
@@ -1,5 +1,5 @@
 groups:
-- name rules.yml
+- name: rules.yml
   rules:
 
   # This rule optimizes the alert query used for JostlerDailyDataVolumeTooLow.
