Fixes scraping of the production Autojoin Prom instances
Previously, it was trying to scrape a hostname that didn't exist. The
production Autojoin Prom instances runs in the mlab-autojoin project, not
mlab-oti.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -425,7 +425,7 @@ scrape_configs:
       'match[]':
         - 'script_success'
     static_configs:
-      - targets: ['prometheus-autojoin-basic.{{PROJECT}}.measurementlab.net']
+      - targets: ['prometheus-autojoin-basic.{{AUTOJOIN_PROJECT}}.measurementlab.net']
         labels:
           cluster: "autojoin"
 
