--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -38,6 +38,10 @@ route:
     match:
       severity: page
       page_project: mlab-{{SHORT_PROJECT}}
+  - receiver: 'slack-fyis'
+    continue: false
+    match:
+      severity: fyi
   - receiver: 'slack-alerts-ticket'
 
 # When two alerts are firing at the same time, we can "inhibit" one based on
@@ -95,6 +99,51 @@ receivers:
   - send_resolved: true
     api_url: {{SLACK_CHANNEL_URL}}
     channel: alerts-{{SHORT_PROJECT}}
+    username: alertmanager
+    title: >
+      [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}]
+      {{.GroupLabels.alertname}}
+    text: |
+      {{- if eq .Status "firing" -}}
+      {{.CommonAnnotations.summary}}
+      > {{if .CommonAnnotations.description}}{{.CommonAnnotations.description}}
+      {{- else}}*Please add an alert description!*{{end}}
+      <https://github.com/m-lab/prometheus-support/edit/main/config/federation/prometheus/alerts.yml|(edit...)>
+      {{- end }}
+      {{ range $key, $value := .CommonLabels }} {{ $key }}=*{{ $value }}*, {{ end }}
+    actions:
+    # NOTE: An empty url is invalid config. An invalid URL will not display.
+    - type: button
+      text: Github
+      url: '{{GITHUB_ISSUE_QUERY}}%20'
+    # NOTE: Add a dashboard.
+    - type: button
+      text: '{{if .CommonAnnotations.dashboard}}Dashboard{{else}}Create Dashboard{{end}}'
+      url: >
+        {{- if .CommonAnnotations.dashboard }}{{ .CommonAnnotations.dashboard }}
+        {{- else }}https://grafana.mlab-sandbox.measurementlab.net/dashboard/new?orgId=1
+        {{- end -}}
+    # NOTE: this constructs a query string for the alertmanager to create
+    # a silence. The format of the query is a url encoded label set: e.g.
+    # {foo="a",bar="b"}
+    - type: button
+      text: Add Silence
+      url: >
+        {{- if eq .Status "firing" -}}
+          {{- .ExternalURL }}/#/silences/new?filter=
+          {{- printf "{" | urlquery }}
+          {{- range $index, $pair := .CommonLabels.SortedPairs }}
+            {{- if $index }}{{ printf "," | urlquery }}{{end}}
+            {{- printf "%s=\"%s\"" $pair.Name $pair.Value | urlquery }}
+          {{- end -}}
+          {{- printf "}" | urlquery }}
+        {{- end -}}
+
+- name: 'slack-fyis'
+  slack_configs:
+  - send_resolved: false
+    api_url: {{SLACK_CHANNEL_URL}}
+    channel: ops-deployment
     username: alertmanager
     title: >
       [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}]
