Adds a new "fyi_project" match criteria for the FYI alert router
This should prevent Alertmanager from matching any FYI "alerts" that come from
projects other than mlab-oti.

--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -42,6 +42,7 @@ route:
     continue: false
     match:
       severity: fyi
+      fyi_project: mlab-{{SHORT_PROJECT}}
   - receiver: 'slack-alerts-ticket'
 
 # When two alerts are firing at the same time, we can "inhibit" one based on
