Stops FYI "alerts" from making it to the default receiver
Previously, FYI "alerts" were falling through to the default Alertmanager
receiver. This change should prevent any FYI alerts from using the default
receiver.

Also, upgrades Alertmanager to v0.29.0, and updates the syntax of alert
matching to use non-deprecated matchers.

--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -35,15 +35,17 @@ route:
   routes:
   - receiver: 'pagerduty-pages'
     continue: true
-    match:
-      severity: page
-      page_project: mlab-{{SHORT_PROJECT}}
+    matchers:
+    - severity=="page"
+    - page_project=="mlab-{{SHORT_PROJECT}}"
   - receiver: 'slack-fyis'
     continue: false
-    match:
-      severity: fyi
-      fyi_project: mlab-{{SHORT_PROJECT}}
+    matchers:
+    - severity=="fyi"
+    - fyi_project=="mlab-{{SHORT_PROJECT}}"
   - receiver: 'slack-alerts-ticket'
+    matchers:
+    - severity!="fyi"
 
 # When two alerts are firing at the same time, we can "inhibit" one based on
 # the other. For example, a host is offline and a service on that host is not
