Adds missing colon after map element

--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -43,7 +43,7 @@ route:
     matchers:
     - severity = fyi
     - fyi_project = mlab-{{SHORT_PROJECT}}
-  - receiver 'null'
+  - receiver: 'null'
     matchers:
     - severity = fyi
 
