Add null Alertmanager receiver to stop FYI "alerts" from hitting default receiver (#1092)
* Removes default receiver from routes section

Having the default receiver in the routes block was redundant. I have also
added a new matcher to the default receiver to be sure that FYI alerts never
fall through to the default receiver

* Adds new "null" receiver that takes no action

This new receiver will be used to avoid FYI "alerts" from passing on to the
default receiver, which is Slack.

* Adds missing colon after map element

--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -43,9 +43,9 @@ route:
     matchers:
     - severity = fyi
     - fyi_project = mlab-{{SHORT_PROJECT}}
-  - receiver: 'slack-alerts-ticket'
+  - receiver: 'null'
     matchers:
-    - severity != fyi
+    - severity = fyi
 
 # When two alerts are firing at the same time, we can "inhibit" one based on
 # the other. For example, a host is offline and a service on that host is not
@@ -195,3 +195,7 @@ receivers:
   pagerduty_configs:
   - send_resolved: true
     service_key: {{PAGERDUTY_SERVICE_KEY}}
+
+# A null/void receiver that can be used to discard certain alerts without
+# taking any sort of action. It will be use to squelch certain FYI "alerts".
+- name: 'null'
